--- a/ggr472-wk8-demo2-main/style.css
+++ b/ggr472-wk8-demo2-main/style.css
@@ -84,3 +84,13 @@ form {
     margin-right: 5px;
     /*position of circle*/
 }
+
+.mapboxgl-popup {
+    max-width: 400px;
+    word-wrap: break-word;
+    font:
+        12px/20px 'Helvetica Neue',
+        Arial,
+        Helvetica,
+        sans-serif;
+}
